@@ -2,29 +2,23 @@ package com.vietnamese.puzzle.service;
 
 import org.junit.jupiter.api.Test;
 
-import java.util.Arrays;
 import java.util.List;
 
-import static org.assertj.core.api.Assertions.assertThat;
+import static org.junit.jupiter.api.Assertions.*;
 
 class PuzzleSolverServiceTest {
 
     private final PuzzleSolverService solverService = new PuzzleSolverService();
 
     @Test
-    void solve_returnsAllValidSolutions() {
+    void solve_and_validate_basicPaths() {
         List<PuzzleSolverService.SolutionCandidate> solutions = solverService.solve();
+        assertEquals(136, solutions.size());
 
-        assertThat(solutions).isNotEmpty();
-        assertThat(solutions.size()).isEqualTo(136);
-        assertThat(solutions.getFirst().positions()).hasSize(9);
-    }
+        List<Integer> valid = solutions.getFirst().positions();
+        assertTrue(solverService.validate(valid).isValid());
 
-    @Test
-    void validate_detectsInvalidInput() {
-        List<Integer> invalid = Arrays.asList(1, 1, 2, 3, 4, 5, 6, 7, 8);
-        PuzzleSolverService.PuzzleValidation validation = solverService.validate(invalid);
-
-        assertThat(validation.isValid()).isFalse();
+        assertFalse(solverService.validate(List.of(1, 1, 2, 3, 4, 5, 6, 7, 8)).isValid());
+        assertFalse(solverService.validate(List.of(1, 2, 3)).isValid());
     }
 }
